# tabit-project

./: .gitignore  README.md  pyproject.toml
src/tabit/: constants.py  main.py
src/tabit/demos/: demo-window.py  name-main.py
src/tabit/ui/: theme.py
src/tabit/ui/widgets/: Button.py  ButtonAdd.py  Frame.py  button_add.py
src/tabit/ui/widgets/base/: button_base.py
src/tabit/utils/: load.py
