[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[project] 
name = "tabit-project"
version = "0.0.1"
authors = [
    {name="amHossein", email="hosseinhastam1999@gmail.com"}
]
description = "set tasks, make habits"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Development Status :: 1 - Planning",
]
license = {text = "MIT"}
license-files = ["LICENCE"]



[tool.hatch.build]
packages = ["src/tabit"]



[project.scripts]
tabit = "tabit.main:main" 